# Project_C214

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Scripts/: send_email.py  setup.sh
src/file_converter/: cli.py  core.py  gui.py
src/word2pdf/: __init__.py  cli.py  gui.py
tests/: conftest.py  test_cli.py  test_core.py  test_csv.py  test_gui.py  test_main.py  test_moc.py  test_pptx.py
